--- a/Dron HealthView/Templates/About.html
+++ b/Dron HealthView/Templates/About.html
@@ -12,8 +12,8 @@
       <div class="container mx-auto flex flex-wrap items-center
         justify-between
         py-4 md:py-5 px-4 md:px-5">
-        <a href="index.html" class="flex items-center text-gray-900">
-          <img src="logo.png" alt="Logo" class="w-16 md:w-40 mr-4
+        <a href="index" class="flex items-center text-gray-900">
+          <img src="{{url_for('static', filename='logo.png')}}" alt="Logo" class="w-16 md:w-40 mr-4
             md:mr-6">
         </a>
         <nav class="md:hidden">
@@ -29,7 +29,7 @@
           </button>
           <div class="hidden absolute top-16 left-0 right-0 z-10
             bg-indigo-100">
-            <a href="Dashboard.html" class="block px-4 py-2 text-gray-900
+            <a href="Dashboard" class="block px-4 py-2 text-gray-900
               hover:bg-gray-200
               font-bold">Dashboard</a>
             <a href="Firstaid.html" class="block px-4 py-2 text-gray-900
@@ -38,20 +38,20 @@
             <a href="#" class="block px-4 py-2 text-gray-900
               hover:bg-gray-200
               font-bold">Medical Providers</a>
-            <a href="About.html" class="block px-4 py-2 text-gray-900
+            <a href="About" class="block px-4 py-2 text-gray-900
               hover:bg-gray-200
               font-bold">About</a>
           </div>
         </nav>
         <nav class="hidden md:flex md:ml-auto md:mr-4">
-          <a href="Dashboard.html" class="mr-5 hover:text-gray-900 font-bold">Dashboard</a>
-          <a href="Firstaid.html" class="mr-5 hover:text-gray-900 font-bold">First
+          <a href="Dashboard" class="mr-5 hover:text-gray-900 font-bold">Dashboard</a>
+          <a href="Firstaid" class="mr-5 hover:text-gray-900 font-bold">First
             Aid Tips</a>
           <a href="#" class="mr-5 hover:text-gray-900 font-bold">Medical
             Providers</a>
-          <a href="About.html" class="mr-5 hover:text-gray-900 font-bold">About</a>
+          <a href="About" class="mr-5 hover:text-gray-900 font-bold">About</a>
         </nav>
-        <button class="inline-flex items-center bg-gray-900 border-0
+        <button href = 'signup' class="inline-flex items-center bg-gray-900 border-0
           py-1 px-3
           focus:outline-none hover:bg-gray-700 rounded text-white
           text-base
@@ -62,7 +62,7 @@
     </header>
 
     <div class="relative bg-gray-900">
-      <img class="w-full h-auto object-cover" src="banner.jpg" alt="Banner
+      <img class="w-full h-auto object-cover" src="{{url_for('static', filename='banner.jpg')}}" alt="Banner
         Image">
       <div class="absolute inset-0 bg-gray-900 opacity-75"></div>
       <div class="container absolute inset-0 mx-auto flex flex-col items-center
@@ -110,7 +110,7 @@
               own health!</p>
           </div>
           <div class="w-full md:w-1/2 lg:w-7/12">
-            <img src="interface.png" alt="Healthy Lifestyle" class="rounded-lg
+            <img src="{{url_for('static', filename='interface.png')}}" alt="Healthy Lifestyle" class="rounded-lg
               shadow-md">
           </div>
         </div>
@@ -134,13 +134,11 @@
           <div class="p-4 lg:w-1/4 md:w-1/2">
             <div class="h-full flex flex-col items-center text-center">
               <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56
-                object-cover object-center mb-4" src="nikhil.jpeg">
+                object-cover object-center mb-4" src="{{url_for('static', filename='nikhil.jpeg')}}">
               <div class="w-full">
                 <h2 class="title-font font-medium text-lg text-gray-900">Nikhil
                   Singhal</h2>
                 <h3 class="text-gray-500 mb-3">Frontend Developer</h3>
-                <p class="mb-4">DIY tote bag drinking vinegar cronut adaptogen
-                  squid fanny pack vaporware.</p>
                 <span class="inline-flex">
                   <a href="http://www.linkedin.com/in/nikhilsinghal1704"
                     class="ml-3 text-gray-500">
@@ -154,7 +152,7 @@
                   </a>
                   <div class="ml-3 w-5 h-5">
                     <a href="mailto:nikhilsinghal1704@google.com">
-                      <img src="gmail.png" class="w-full h-full object-cover
+                      <img src="{{url_for('static', filename='gmail.png')}}" class="w-full h-full object-cover
                         object-center">
                     </a>
                   </div>
@@ -166,13 +164,11 @@
             <div class="h-full flex flex-col items-center text-center">
               <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56
                 object-cover object-center mb-4"
-                src="Yogita.jpg">
+                src="{{url_for('static', filename='Yogita.jpg')}}">
               <div class="w-full">
                 <h2 class="title-font font-medium text-lg text-gray-900">Yogita
                   Kanyal</h2>
                 <h3 class="text-gray-500 mb-3">Backend Developer</h3>
-                <p class="mb-4">DIY tote bag drinking vinegar cronut adaptogen
-                  squid fanny pack vaporware.</p>
                 <span class="inline-flex">
                   <a href="http://www.linkedin.com/in/nikhilsinghal1704"
                     class="ml-3 text-gray-500">
@@ -186,7 +182,7 @@
                   </a>
                   <div class="ml-3 w-5 h-5">
                     <a href="mailto:nikhilsinghal1704@google.com">
-                      <img src="gmail.png" class="w-full h-full object-cover
+                      <img src="{{url_for('static', filename='gmail.png')}}" class="w-full h-full object-cover
                         object-center">
                     </a>
                   </div>
@@ -198,12 +194,10 @@
             <div class="h-full flex flex-col items-center text-center">
               <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56
                 object-cover object-center mb-4"
-                src="Gautam.png">
+                src="{{url_for('static', filename='Gautam.png')}}">
               <div class="w-full">
                 <h2 class="title-font font-medium text-lg text-gray-900">Gautam</h2>
                 <h3 class="text-gray-500 mb-3">Backend Developer</h3>
-                <p class="mb-4">DIY tote bag drinking vinegar cronut adaptogen
-                  squid fanny pack vaporware.</p>
                 <span class="inline-flex">
                   <a href="http://www.linkedin.com/in/nikhilsinghal1704"
                     class="ml-3 text-gray-500">
@@ -217,7 +211,7 @@
                   </a>
                   <div class="ml-3 w-5 h-5">
                     <a href="mailto:nikhilsinghal1704@google.com">
-                      <img src="gmail.png" class="w-full h-full object-cover
+                      <img src="{{url_for('static', filename='gmail.png')}}" class="w-full h-full object-cover
                         object-center">
                     </a>
                   </div>
@@ -229,12 +223,10 @@
             <div class="h-full flex flex-col items-center text-center">
               <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56
                 object-cover object-center mb-4"
-                src="Rajat.jpg">
+                src="{{url_for('static', filename='Rajat.jpg')}}">
               <div class="w-full">
                 <h2 class="title-font font-medium text-lg text-gray-900">Rajat</h2>
                 <h3 class="text-gray-500 mb-3">Database Developer</h3>
-                <p class="mb-4">DIY tote bag drinking vinegar cronut adaptogen
-                  squid fanny pack vaporware.</p>
                 <span class="inline-flex">
                   <a href="http://www.linkedin.com/in/nikhilsinghal1704"
                     class="ml-3 text-gray-500">
@@ -248,7 +240,7 @@
                   </a>
                   <div class="ml-3 w-5 h-5">
                     <a href="mailto:nikhilsinghal1704@google.com">
-                      <img src="gmail.png" class="w-full h-full object-cover
+                      <img src="{{url_for('static', filename='gmail.png')}}" class="w-full h-full object-cover
                         object-center">
                     </a>
                   </div>
@@ -265,7 +257,7 @@
       <div class="bg-gray-100">
         <div class="container px-5 py-6 mx-auto flex items-center
           sm:flex-row flex-col">
-          <img src="logo.png" alt="Logo" class="w-16 md:w-40 mr-4
+          <img src="{{url_for('static', filename='logo.png')}}" alt="Logo" class="w-16 md:w-40 mr-4
             md:mr-6">
           <p class="text-sm text-gray-500 sm:ml-6 sm:mt-0 mt-4">© 2023 TechTitans
           </p>
@@ -273,13 +265,13 @@
             justify-center sm:justify-start">
             <div class="ml-3 w-5 h-5">
               <a href="mailto:dcetechtitans@google.com">
-                <img src="gmail.png" class="w-full h-full object-cover
+                <img src="{{url_for('static', filename='gmail.png')}}" class="w-full h-full object-cover
                   object-center">
               </a>
             </div>
             <div class="ml-3 w-5 h-5">
               <a href="">
-                  <img src="github.png" class="w-full h-full object-cover
+                  <img src="{{url_for('static', filename='github.png')}}" class="w-full h-full object-cover
                     object-center">
               </a>
             </div>
